// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders optional props 1`] = `
<picture
  class="image"
>
  <source
    data-srcset="/image.jpg?fm=webp&fl=progressive&f=faces&q=50&w=200"
    type="image/webp"
  />
  <source
    data-srcset="/image.jpg?fm=jpg&fl=progressive&f=faces&q=50&w=200"
    type="image/jpeg"
  />
   
  <img
    alt="Foo"
    class="lazyload"
    data-src="/image.jpg?fl=progressive&f=faces&q=50&w=200"
  />
</picture>
`;

exports[`Image renders required props 1`] = `
<picture
  class="image"
>
  <source
    data-srcset="/image.jpg?fm=webp"
    type="image/webp"
  />
  <source
    data-srcset="/image.jpg?fm=jpg"
    type="image/jpeg"
  />
   
  <img
    alt="Foo"
    class="lazyload"
    data-src="/image.jpg"
  />
</picture>
`;
